- added support for apk and exe file formats  - added warnings for executable file formats  - fixed close button variant on alert in dark mode

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -153,6 +153,12 @@ ul, ol {
 	.progress {
 		background-color: $gray-800;
 	}
+
+	.alert {
+		.btn-close {
+			filter: unset;
+		}
+	}
 }
 
 @include app-theme(light) {
